--- a/Home/Privacy.cshtml
+++ b/Home/Privacy.cshtml
@@ -1,6 +1,7 @@
-﻿@{
+﻿@https://github.com/Carlin421/onebranch.git{
+
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Server 是在地端執行，不太會有資安的問題</p>
+<p>Server sd是在地端執行，不太會有資安的問題</p>
